Bug 1170107 part 1 - Call GetProperty/CallProperty from the interpreter and Baseline. r=bhackett